--- a/news.html
+++ b/news.html
@@ -11,12 +11,13 @@
         <div class="logo"><h1 class="">CO-HELP-VID</h1></div>
         <div class="menu">
           <a href="home.html">Home</a>
-          <a href="index.html">Stats</a>
+          <a href="index.html">Cases</a>
           <a href="news.html">News</a>
           <a href="hacks.html">Hacks</a>
           <a href="helpline.html">Helpline</a>
         </div>
       </nav>
+
       <div class="box">
         <div></div>
         <div></div>
@@ -38,23 +39,14 @@
               <br />
               <br />
 
-              <h3>&nbsp;&nbsp;&nbsp;&nbsp; CO-HELP-VID is there to help you</h3>
-              <h1>
-                no matter where you are <span class="change_content"></span>
-              </h1>
               <br /><br />
-
-              &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-              <a href="#" class="btone">learn more</a
-              >&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-              <a href="signlog.html" class="btntwo">sign up here </a>
             </section>
           </main>
         </header>
+        <footer class="contact">
+          <h2>CONTACT</h2>
+        </footer>
       </div>
-      <footer>
-        <h3>CONTACT</h3>
-      </footer>
     </div>
 
     <script src="home.js"></script>
